<resources>
    <string name="app_name">Rent A Savari</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carname">Mahindra KUV 100</string>
    <string name="carseat">5 Seater</string>
    <string name="smallpackage">Rs 7750\n360 KMs</string>
    <string name="mediumpackage">Rs 7750\n360 KMs</string>
    <string name="highpackage">Rs 7750\n360 KMs</string>
    <string name="carimage">CarImage</string>
    <string name="btn_find_car">Find Car</string>
    <string name="btnfilter">Filter</string>
    <string name="starttime">--:--</string>
    <string name="startAMPM">--</string>
    <string name="starticoncal">starticoncal</string>
    <string name="startday">---------</string>
    <string name="select_pickup_time">Select PickUp Time</string>
    <string name="select_drop_time">Select Drop Time</string>
    <string name="enddate">---- -- ----</string>
    <string name="startdate">---- -- ----</string>
    <string name="endAMPM">--</string>
    <string name="endtime">--:--</string>
    <string name="endday">---------</string>
    <string name="endcalicon">endiconcal</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="driving_licence_photo_front_txt">Driving Licence Photo (Front)</string>
    <string name="driving_licence_photo_back_txt">Driving Licence Photo (Back)</string>
    <string name="address_proof_photo_front_txt">Address Proof Photo (Front)</string>
    <string name="address_proof_photo_back_txt">Address Proof Photo (Back)</string>
    <string name="capture_address_proof_back">TODO</string>
    <string name="address_proof_back">TODO</string>
    <string name="capture_address_proof_front">TODO</string>
    <string name="address_proof_front">TODO</string>
    <string name="capture_licence_back">TODO</string>
    <string name="licence_back">TODO</string>
    <string name="capture_licence_front">TODO</string>
    <string name="licence_front">TODO</string>
    <string name="continuebtn">Continue</string>
</resources>