<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layoutbg">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp">
        <ImageView
            android:id="@+id/carImage"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/democar"
            android:background="@color/white"
            android:padding="10dp"
            android:contentDescription="@string/carimage" />
        <TextView
            android:id="@+id/carName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carname"
            android:layout_toEndOf="@+id/carImage"
            android:textSize="20sp"
            android:paddingTop="20dp"
            android:fontFamily="@font/adamina"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/carSeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carseat"
            android:layout_toEndOf="@+id/carImage"
            android:fontFamily="@font/adamina"
            android:layout_below="@+id/carName"
            android:textSize="16sp"
            android:paddingTop="15dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/black"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/carImage"
            android:padding="5dp"
            android:background="@drawable/bgcircle">

            <Button
                android:id="@+id/smallPackage"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btnshape"
                android:fontFamily="@font/adamina"
                android:lineSpacingExtra="5dp"
                android:text="@string/smallpackage"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:onClick="onClickSmallPackage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/mediumPackage"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/mediumPackage"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/smallPackage"
                android:background="@drawable/btnshape"
                android:fontFamily="@font/adamina"
                android:lineSpacingExtra="5dp"
                android:text="@string/mediumpackage"
                android:onClick="onClickMediumPackage"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/highPackage"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/mediumPackage"
                android:background="@drawable/btnshape"
                android:fontFamily="@font/adamina"
                android:lineSpacingExtra="5dp"
                android:onClick="onClickHighPackage"
                android:text="@string/highpackage"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/mediumPackage"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>